Styling corrections.
Addresses now convert newlines into <br/> tags so the format looks
right.

The scrollbar in the sidebar is hidden if not necessary. Also, its
width is now correctly enforced (it was previously overriden by
the other cell width, which takes 100%, so the sidebar got squeezed
to its minimum acceptable width). This was done by using min-width
instead of width.

--- a/userlist/static/userlist/style.css
+++ b/userlist/static/userlist/style.css
@@ -78,7 +78,7 @@ img:-moz-broken
 	padding: 2em;
 	vertical-align: top;
 	text-align: left;
-	width: 7em;
+	min-width: 13em;
 	border-right: solid thin rgba(255, 255, 255, 0.6);
 }
 
@@ -94,7 +94,7 @@ img:-moz-broken
 	padding: 0;
 	margin: 0.3em;
 	max-height: 20em;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 #welcome, #details, #notfound {
